openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-user-accounts
  name: openshift-user-accounts
spec:
  host: your-host-name
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: openshift-user-accounts
    weight: 100
  wildcardPolicy: None
